our first component

--- a/Source/DD.Youtube.HyperNotesPlus.Client/Pages/Index.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/Pages/Index.razor
@@ -1,14 +1,5 @@
 ﻿@page "/"
 
-<section class="hero">
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
-                Hello, world!
-            </h1>
-            <h2 class="subtitle">
-                Welcome to your new app. And again!
-            </h2>
-        </div>
-    </div>
-</section>
+@using DD.Youtube.HyperNotesPlus.Client.Components
+
+<HelloWorldComponent></HelloWorldComponent>
