--- a/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
@@ -7,3 +7,8 @@
 @using Microsoft.JSInterop
 @using DD.Youtube.HyperNotesPlus.Client
 @using DD.Youtube.HyperNotesPlus.Client.Shared
+
+
+
+@*Usings from Shared*@
+@using DD.Youtube.HyperNotesPlus.Shared.Utilities
