created domain proyects, created Note model, created NotesListComponent

--- a/Source/DD.Youtube.HyperNotesPlus.Client/Pages/Index.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/Pages/Index.razor
@@ -1,5 +1,3 @@
 ﻿@page "/"
 
-@using DD.Youtube.HyperNotesPlus.Client.Components
-
-<HelloWorldComponent></HelloWorldComponent>
+<NotesListComponent></NotesListComponent>
