--- a/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
@@ -9,6 +9,14 @@
 @using DD.Youtube.HyperNotesPlus.Client.Shared
 
 
+@*Usings from Client*@
+@using DD.Youtube.HyperNotesPlus.Client.Components
+
 
 @*Usings from Shared*@
 @using DD.Youtube.HyperNotesPlus.Shared.Utilities
+
+
+@*Usings from Domain*@
+@using DD.Youtube.HyperNotesPlus.Domain.Notes
+
