--- a/Source/DD.Youtube.HyperNotesPlus.Client/Components/NotesListComponent.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/Components/NotesListComponent.razor
@@ -1,42 +1,49 @@
 ﻿<h3>NotesListComponent</h3>
 
 
-@foreach (var note in notes)
+@if (isLoading)
 {
-    @if (note.State == Domain.Common.Definitions.StateEnum.Enabled)
+    <LoadingComponent />
+}
+else
+{
+    @foreach (var note in notes)
     {
-        <article class="media">
-            <figure class="media-left">
-                <p class="image is-64x64">
-                    <img src="https://bulma.io/images/placeholders/128x128.png">
-                </p>
-            </figure>
-            <div class="media-content">
-                <div class="content">
-                    <p>
-                        <strong>@note.Name</strong> <small>@@Daniel</small> <small>@note.CreatedOn</small>
-                        <br>
-                        @note.Content
+        @if (note.State == Domain.Common.Definitions.StateEnum.Enabled)
+        {
+            <article class="media">
+                <figure class="media-left">
+                    <p class="image is-64x64">
+                        <img src="https://bulma.io/images/placeholders/128x128.png">
                     </p>
-                </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item">
-                            <span class="icon is-small"><i class="fas fa-reply"></i></span>
-                        </a>
-                        <a class="level-item">
-                            <span class="icon is-small"><i class="fas fa-retweet"></i></span>
-                        </a>
-                        <a class="level-item">
-                            <span class="icon is-small"><i class="fas fa-heart"></i></span>
-                        </a>
+                </figure>
+                <div class="media-content">
+                    <div class="content">
+                        <p>
+                            <strong>@note.Name</strong> <small>@@Daniel</small> <small>@note.CreatedOn</small>
+                            <br>
+                            @note.Content
+                        </p>
                     </div>
-                </nav>
-            </div>
-            <div class="media-right">
-                <button class="delete"></button>
-            </div>
-        </article>
+                    <nav class="level is-mobile">
+                        <div class="level-left">
+                            <a class="level-item">
+                                <span class="icon is-small"><i class="fas fa-reply"></i></span>
+                            </a>
+                            <a class="level-item">
+                                <span class="icon is-small"><i class="fas fa-retweet"></i></span>
+                            </a>
+                            <a class="level-item">
+                                <span class="icon is-small"><i class="fas fa-heart"></i></span>
+                            </a>
+                        </div>
+                    </nav>
+                </div>
+                <div class="media-right">
+                    <button class="delete"></button>
+                </div>
+            </article>
+        }
     }
 }
 
@@ -44,15 +51,19 @@
 @code {
 
     private List<Note> notes = new List<Note>();
+    private bool isLoading = true;
 
-    protected override void OnInitialized()
+
+    protected override async Task OnInitializedAsync()
     {
+        await Task.Delay(2000);
         notes = new List<Note>()
-{
+    {
             {new Note{ Name = "Nota1", Content = "Contenido nota 1", State = Domain.Common.Definitions.StateEnum.Enabled }},
             {new Note{ Name = "Nota2", Content = "Contenido nota 2", State = Domain.Common.Definitions.StateEnum.Disabled }},
             {new Note{ Name = "Nota3", Content = "Contenido nota 3", State = Domain.Common.Definitions.StateEnum.Enabled }},
         };
+        isLoading = false;
     }
 
 }
