added service for notes and injected into view

--- a/Source/DD.Youtube.HyperNotesPlus.Client/Components/NotesListComponent.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/Components/NotesListComponent.razor
@@ -1,4 +1,6 @@
-﻿<h3>NotesListComponent</h3>
+﻿@inject INoteService NoteService
+
+<h3>NotesListComponent</h3>
 
 
 @if (isLoading)
@@ -56,13 +58,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        await Task.Delay(2000);
-        notes = new List<Note>()
-    {
-            {new Note{ Name = "Nota1", Content = "Contenido nota 1", State = Domain.Common.Definitions.StateEnum.Enabled }},
-            {new Note{ Name = "Nota2", Content = "Contenido nota 2", State = Domain.Common.Definitions.StateEnum.Disabled }},
-            {new Note{ Name = "Nota3", Content = "Contenido nota 3", State = Domain.Common.Definitions.StateEnum.Enabled }},
-        };
+        var response = await NoteService.GetAllNotes();
+        notes = response.ToList();
         isLoading = false;
     }
 
