--- a/Source/DD.Youtube.HyperNotesPlus.Client/wwwroot/css/app.css
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/wwwroot/css/app.css
@@ -25,3 +25,12 @@
     left: 10%;
     width: 80%
 }
+
+
+.new-note-wrapper{
+    position: fixed;
+    width: 40px;
+    height : 40px;
+    bottom : 20px;
+    right : 20px
+}
