--- a/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
@@ -12,6 +12,8 @@
 @*Usings from Client*@
 @using DD.Youtube.HyperNotesPlus.Client.Components
 
+@*Usings from Client.Extensions*@
+@using DD.Youtube.HyperNotesPlus.Client.Extensions.Services
 
 @*Usings from Shared*@
 @using DD.Youtube.HyperNotesPlus.Shared.Utilities
