--- a/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using DD.Youtube.HyperNotesPlus.Client
+@using DD.Youtube.HyperNotesPlus.Client.Entities.Notes
 @using DD.Youtube.HyperNotesPlus.Client.Shared
 
 
