updated service with list, added render fragment for zero records

--- a/Source/DD.Youtube.HyperNotesPlus.Client/Components/GenericList.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/Components/GenericList.razor
@@ -1,6 +1,18 @@
 ﻿@typeparam T
 
-@foreach (var item in Items.Where(k=> Filter?.Invoke(k) ?? true))
+
+@if (Items.Count == 0)
+{
+    @if (ZeroRecordsFragment != null)
+    {
+        @ZeroRecordsFragment
+    }
+    else
+    {
+        <span>Zero records found</span>
+    }
+}
+@foreach (var item in Items.Where(k => Filter?.Invoke(k) ?? true))
 {
     @ChildContent(item)
 }
@@ -9,4 +21,5 @@
     [Parameter] public List<T> Items { get; set; }
     [Parameter] public RenderFragment<T> ChildContent { get; set; }
     [Parameter] public Predicate<T> Filter { get; set; }
+    [Parameter] public RenderFragment ZeroRecordsFragment { get; set; }
 }
