--- a/Source/DD.Youtube.HyperNotesPlus.Client/App.razor
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/App.razor
@@ -1,10 +1,20 @@
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <RouteView RouteData="@routeData" DefaultLayout="@currentLayout" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
+        <LayoutView Layout="@typeof(NotFoundLayout)">
             <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    private Type currentLayout = typeof(MainLayout);
+
+    protected override async Task OnInitializedAsync()
+    {
+        await Task.Delay(3000);
+        currentLayout = typeof(SecondLayout);
+    }
+}
